--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <div class="background-fixed"></div>
   <div class="scroll-container">
     <div class="container">
-      <h1>UWON Vocabulary Test - Lesson 11</h1>
+      <h1>UWON Vocabulary Test - Lesson 10</h1>
       <div id="timer">⏱ Time Elapsed: 0 sec</div>
 
       <div id="testSection">
@@ -156,46 +156,46 @@
 
   <script>
     const wordList = [
-        { word: "enormous", meaning: "adj. 巨大的，庞大的" },
-        { word: "enterprise", meaning: "n. 企业，事业" },
-        { word: "entertainment", meaning: "n. 娱乐，招待" },
-        { word: "enthusiasm", meaning: "n. 热情，热忱" },
-        { word: "entitle", meaning: "v. 给予权利，命名" },
-        { word: "entry", meaning: "n. 进入，条目" },
-        { word: "environment", meaning: "n. 环境" },
-        { word: "envy", meaning: "n./v. 嫉妒，羡慕" },
-        { word: "equal", meaning: "adj. 相等的；v. 等于；n. 对等者" },
-        { word: "equation", meaning: "n. 方程式，等式" },
-        { word: "equivalent", meaning: "adj. 等价的；n. 等同物" },
-        { word: "erase", meaning: "v. 擦除，删除" },
-        { word: "erect", meaning: "v. 建立，竖立；adj. 直立的" },
-        { word: "essential", meaning: "adj. 必要的；n. 要素" },
-        { word: "establish", meaning: "v. 建立，确立" },
-        { word: "estate", meaning: "n. 房地产，财产" },
-        { word: "estimate", meaning: "v./n. 估计，估价" },
-        { word: "evaluate", meaning: "v. 评估，评价" },
-        { word: "evaporate", meaning: "v. 蒸发，消失" },
-        { word: "evolve", meaning: "v. 进化，发展" },
-        { word: "exaggerate", meaning: "v. 夸张，夸大" },
-        { word: "exceed", meaning: "v. 超过，超出" },
-        { word: "excess", meaning: "n. 超过，过量；adj. 过量的" },
-        { word: "exchange", meaning: "v./n. 交换，兑换" },
-        { word: "exclaim", meaning: "v. 呼喊，惊叫" },
-        { word: "exclude", meaning: "v. 排除，不包括" },
-        { word: "exclusively", meaning: "adv. 专门地，仅仅" },
-        { word: "excursion", meaning: "n. 远足，短途旅行" },
-        { word: "execute", meaning: "v. 执行，处决" },
-        { word: "executive", meaning: "n. 主管；adj. 行政的" },
-        { word: "exert", meaning: "v. 施加，运用" },
-        { word: "exhaust", meaning: "v. 使精疲力尽；n. 排气" },
-        { word: "expand", meaning: "v. 扩展，膨胀" },
-        { word: "explode", meaning: "v. 爆炸，爆发" },
-        { word: "exploit", meaning: "v. 利用，剥削；n. 英勇行为" },
-        { word: "explore", meaning: "v. 探索，探险" },
-        { word: "explosive", meaning: "adj. 爆炸的；n. 炸药" },
-        { word: "extend", meaning: "v. 延伸，扩展" },
-        { word: "exterior", meaning: "adj. 外部的；n. 外部" },
-        { word: "external", meaning: "adj. 外部的，外在的" }
+        { word: "domestic", meaning: "adj. 国内的，家庭的，驯养的" },
+        { word: "dominant", meaning: "adj. 占优势的，主要的，支配的" },
+        { word: "dominate", meaning: "v. 支配，控制，占据主导地位" },
+        { word: "dose", meaning: "n. 剂量；v. 给药" },
+        { word: "dot", meaning: "n. 点，小圆点；v. 打点" },
+        { word: "downtown", meaning: "n./adj./adv. 市中心（的）" },
+        { word: "draft", meaning: "n. 草稿，征兵；v. 起草" },
+        { word: "drain", meaning: "v. 排出，耗尽；n. 排水沟" },
+        { word: "drift", meaning: "v./n. 漂流，漂移" },
+        { word: "drown", meaning: "v. 淹死，溺水" },
+        { word: "due", meaning: "adj. 到期的，应得的；n. 应付款" },
+        { word: "dull", meaning: "adj. 无聊的，迟钝的，暗淡的" },
+        { word: "dumb", meaning: "adj. 哑的，愚蠢的" },
+        { word: "dump", meaning: "v. 倾倒，丢弃；n. 垃圾堆" },
+        { word: "durable", meaning: "adj. 耐用的，持久的" },
+        { word: "dynamic", meaning: "adj. 动态的，有活力的" },
+        { word: "earnest", meaning: "adj. 认真的，诚挚的" },
+        { word: "echo", meaning: "n./v. 回声，回响" },
+        { word: "economical", meaning: "adj. 节约的，经济的" },
+        { word: "edit", meaning: "v. 编辑，校订" },
+        { word: "efficient", meaning: "adj. 高效的，有效率的" },
+        { word: "elaborate", meaning: "adj. 精心制作的；v. 精心制作" },
+        { word: "elastic", meaning: "adj. 有弹性的，灵活的" },
+        { word: "elegant", meaning: "adj. 优雅的，高雅的" },
+        { word: "elementary", meaning: "adj. 基本的，初级的" },
+        { word: "eliminate", meaning: "v. 消除，排除" },
+        { word: "elsewhere", meaning: "adv. 在别处，到别处" },
+        { word: "embarrass", meaning: "v. 使尴尬，使困窘" },
+        { word: "embrace", meaning: "v./n. 拥抱，接受，采纳" },
+        { word: "emerge", meaning: "v. 出现，浮现，显现" },
+        { word: "emergency", meaning: "n. 紧急情况，突发事件" },
+        { word: "emit", meaning: "v. 发出，散发（光、热、气味等）" },
+        { word: "emotion", meaning: "n. 情感，情绪" },
+        { word: "emphasize", meaning: "v. 强调，着重" },
+        { word: "employ", meaning: "v. 雇佣，使用" },
+        { word: "enclose", meaning: "v. 围住，封入" },
+        { word: "encounter", meaning: "v./n. 遇到，邂逅，冲突" },
+        { word: "endure", meaning: "v. 忍受，持续" },
+        { word: "engage", meaning: "v. 吸引，参与，雇佣" },
+        { word: "enhance", meaning: "v. 提高，增强" }
     ];
 
     let currentIndex = 0;
